--- a/v2/server/src/app/components/profile/profile.component.html
+++ b/v2/server/src/app/components/profile/profile.component.html
@@ -8,7 +8,7 @@
         <p><strong>Nombres:</strong> {{ user.persona.nombres }}</p>
         <p><strong>Apellidos:</strong> {{ user.persona.apellidos }}</p>
         <p><strong>Email:</strong> {{ user.persona.usuario.email }}</p>
-        <p><strong>Fecha de Nacimiento:</strong> {{ user.persona.fecha_nacimiento | date:'dd/MM/yyyy' }}</p>
+        <p><strong>Edad:</strong> {{ edad }}</p>
         <p><strong>Sexo:</strong> {{ user.persona.sexo }}</p>
         <p><strong>Estado Civil:</strong> {{ user.persona.estado_civil }}</p>
         <p><strong>Celular:</strong> {{ user.persona.celular }}</p>
@@ -27,7 +27,7 @@
         <p><strong>Nombres:</strong> {{ user.persona.nombres }}</p>
         <p><strong>Apellidos:</strong> {{ user.persona.apellidos }}</p>
         <p><strong>Email:</strong> {{ user.persona.usuario.email }}</p>
-        <p><strong>Fecha de Nacimiento:</strong> {{ user.persona.fecha_nacimiento | date:'dd/MM/yyyy' }}</p>
+        <p><strong>Edad:</strong> {{ edad }} años</p>
         <p><strong>Sexo:</strong> {{ user.persona.sexo }}</p>
         <p><strong>Estado Civil:</strong> {{ user.persona.estado_civil }}</p>
         <p><strong>Celular:</strong> {{ user.persona.celular }}</p>
