--- a/v2/server/src/app/components/evaluar-paciente/evaluar-paciente.component.css
+++ b/v2/server/src/app/components/evaluar-paciente/evaluar-paciente.component.css
@@ -1,9 +1,123 @@
-.example-form {
-  min-width: 150px;
-  max-width: 500px;
+/* Estilos del contenedor principal */
+.container {
+  font-family: Arial, sans-serif;
+  width: 700px;
+  height: 500px;
+  margin: 10px auto;
+  padding: 20px;
+  background-color: #ffffff;
+  border: 1px solid #e0e0e0;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+}
+
+/* Estilos para la sección de datos del paciente */
+.patient-data {
+  margin-bottom: 20px;
+}
+
+.patient-data .section {
+  padding: 10px;
+  background-color: #f9f9f9;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+
+.patient-data .section h3 {
+  font-size: 15px;
+  color: #555555;
+  margin-bottom: 10px;
+  border-bottom: 2px solid #cccccc;
+  padding-bottom: 8px;
+}
+
+.patient-data .field {
+  margin-bottom: 15px;
+}
+
+.patient-data .field strong {
+  margin-right: 10px;
+  font-weight: bold;
+}
+
+/* Estilos para la sección de evaluación especialista */
+.evaluation-data {
+  display: grid;
+  grid-template-rows: auto auto; /* Dos filas de tamaño automático */
+  gap: 20px;
+}
+
+.evaluation-data .section {
+  padding: 10px;
+  background-color: #f9f9f9;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+}
+
+.evaluation-data .section h3 {
+  font-size: 15px;
+  color: #555555;
+  margin-bottom: 10px;
+  border-bottom: 2px solid #cccccc;
+  padding-bottom: 8px;
+}
+
+.evaluation-data .example-form {
+  display: grid;
+  grid-template-rows: auto auto auto auto auto; /* Cinco filas de tamaño automático */
+  gap: 10px;
+}
+
+.evaluation-data .example-full-width {
   width: 100%;
 }
 
-.example-full-width {
-  width: 100%;
+.evaluation-data button {
+  margin-top: 10px;
+}
+
+/* Estilos para la sección adicional */
+.additional-section {
+  padding: 10px;
+  background-color: #f9f9f9;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+}
+
+/* Estilos para los mat-label personalizados */
+.custom-label {
+  color: #333333;
+}
+.titulo-1 {
+  font-weight: bold;
+  color: #333333;
+}
+/* Estilos personalizados para el botón */
+.custom-button {
+  background-color: #0a455c; /* Color de fondo verde */
+  color: #ffffff; /* Color de texto blanco */
+  border: none; /* Sin borde */
+  border-radius: 4px; /* Bordes redondeados */
+  padding: 10px 20px; /* Espaciado interno */
+  font-size: 16px; /* Tamaño de fuente */
+  cursor: pointer; /* Cambia el cursor a puntero al pasar el mouse */
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); /* Sombra ligera */
+}
+
+/* Efecto al pasar el mouse */
+.custom-button:hover {
+  opacity: 0.8; /* Opacidad reducida al pasar el mouse */
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Sombra más intensa */
+}
+
+
+.titulo_general {
+  text-align: center; /* Centrar el texto */
+  color: #032a44; /* Color de texto */
+  margin-bottom: 20px; /* Espacio inferior */
+  font-size: 24px; /* Tamaño de fuente */
+  font-weight: bold; /* Negrita */
 }
