--- a/v2/server/src/app/pages/especialista/visualizar-tests-realizados/visualizar-tests-realizados.component.html
+++ b/v2/server/src/app/pages/especialista/visualizar-tests-realizados/visualizar-tests-realizados.component.html
@@ -1,12 +1,22 @@
 <div class="container">
   <mat-card appearance="outlined">
     <mat-card-content>
-      <div style="text-align: right">
-        <button mat-button (click)="openDialog()">VER MAPA DE CALOR</button>
-      </div>
+      <!-- Botón para abrir el diálogo del mapa de calor -->
+<!-- Botón para abrir el diálogo del mapa de calor -->
+    <div class="mapa-calor-button-container">
+      <button mat-button class="mapa-calor-button" (click)="openDialog()">VER MAPA DE CALOR</button>
+    </div>
+
+
+      <!-- Título -->
       <h1 class="titulo">Tests realizados</h1>
+
+      <!-- Tabla de tests -->
       <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource">
+
+          <!-- Columnas de la tabla -->
+
           <!-- No. Column -->
           <ng-container matColumnDef="position">
             <th mat-header-cell *matHeaderCellDef>No.</th>
@@ -35,53 +45,53 @@
             </td>
           </ng-container>
 
+
           <!-- Diagnóstico General Column -->
           <ng-container matColumnDef="diagnostico general">
             <th mat-header-cell *matHeaderCellDef>Diagnóstico General</th>
-            <td mat-cell *matCellDef="let element">
-              {{ element["diagnostico general"] }}
+            <td mat-cell *matCellDef="let element" class="diagnostico-general-cell">
+              <div class="circle-container">
+                <span class="circulo" [ngClass]="{'circulo-minima': element['diagnostico general'] === 'Ansiedad mínima',
+                                                  'circulo-moderada': element['diagnostico general'] === 'Ansiedad moderada',
+                                                  'circulo-severa': element['diagnostico general'] === 'Ansiedad severa',
+                                                  'circulo-extrema': element['diagnostico general'] === 'Ansiedad extrema'}"></span>
+                <span class="diagnostico-text">{{ element["diagnostico general"] }}</span>
+              </div>
             </td>
           </ng-container>
+
+
 
           <!-- Diagnóstico Column -->
           <ng-container matColumnDef="detalle diagnosticos">
             <th mat-header-cell *matHeaderCellDef>Detalle diagnósticos</th>
             <td mat-cell *matCellDef="let element">
-              <button
-                mat-button
-                (click)="abrirDetalleDiagnostico(element)"
-                class="boton-ver"
-              >
-                Ver diagnóstico
+              <button mat-button (click)="abrirDetalleDiagnostico(element)" class="boton-ver">
+                Ver
               </button>
             </td>
-          </ng-container>
-
-          <!-- Estado Column -->
-          <ng-container matColumnDef="estado">
-            <th mat-header-cell *matHeaderCellDef>Estado</th>
-            <td mat-cell *matCellDef="let element">{{ element.estado }}</td>
           </ng-container>
 
           <!-- Evaluación Column -->
           <ng-container matColumnDef="evaluacion">
             <th mat-header-cell *matHeaderCellDef>Evaluación</th>
-            <td mat-cell *matCellDef="let element">
-              <button
-                mat-button
-                (click)="abrirDetalleEvaluacion(element.codigo_historial_test)"
-                class="boton-ver"
-              >
-                Ver evaluación
+            <td mat-cell *matCellDef="let element" class="boton-ver-cell">
+              <button mat-button
+                      (click)="abrirDetalleEvaluacion(element.codigo_historial_test, element)"
+                      class="boton-ver"
+                      [ngClass]="{
+                        'evaluado': element.estado === 'evaluado',
+                        'no-evaluado': element.estado === 'no evaluado'
+                      }">
+                {{ element.estado }}
               </button>
             </td>
           </ng-container>
 
-          <!-- Evaluar Paciente Column -->
           <ng-container matColumnDef="evaluar">
             <th mat-header-cell *matHeaderCellDef>Evaluar Paciente</th>
-            <td mat-cell *matCellDef="let element">
-              <button mat-button (click)="evaluar(element)" class="boton">
+            <td mat-cell *matCellDef="let element" class="evaluar-cell">
+              <button mat-button (click)="evaluar(element)" class="boton evaluar-button">
                 Evaluar Paciente
               </button>
             </td>
@@ -89,15 +99,14 @@
 
           <!-- Definición de filas y encabezados -->
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
+          <tr mat-row *matRowDef="let element; columns: displayedColumns;"></tr>
         </table>
+
         <!-- Paginator -->
-        <mat-paginator
-          [pageSizeOptions]="[5, 10, 20]"
-          showFirstLastButtons
-          aria-label="Selecciona página de elementos periódicos"
-          [pageSize]="10"
-        >
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                       showFirstLastButtons
+                       aria-label="Selecciona página de elementos periódicos"
+                       [pageSize]="10">
         </mat-paginator>
       </div>
     </mat-card-content>
