--- a/v2/server/src/app/components/tests/tests.component.html
+++ b/v2/server/src/app/components/tests/tests.component.html
@@ -35,7 +35,7 @@
               hideToggle
             >
               <mat-expansion-panel-header>
-                <mat-panel-title>Secciones</mat-panel-title>
+                <mat-panel-title>{{seccion.descripcion}}</mat-panel-title>
                 <mat-panel-description>
                   Secciones del Test
                 </mat-panel-description>
